# calciforge

./: .dockerignore  .gitignore  .gitleaks.local.toml.example  .gitleaks.toml  AGENTS.md  BACKLOG.md  CLAUDE.md  Cargo.toml  Cross.toml  HELICONE_INTEGRATION.md  INTEGRATION_SUMMARY.md  LICENSE  POC_SUMMARY.md  RALPH_BACKLOG.md  README.md  ROADMAP.md  TEST_DEVELOPMENT_GUIDE.md  TEST_SUITE_SUMMARY.md  THIRD_PARTY_NOTICES.txt  TRACELOOP_INTEGRATION.md  check_backlog.py  config_helicone_test.toml  config_vm210_with_alloys.toml  demo_poc  demo_poc.rs  helicone-config.yaml  install-claw-integration.sh  run_adversarial_tests.sh  run_mock_tests.rs  run_mock_tests.sh  run_ralph_backlog.sh  signal-config-example.toml  test-claw-integration.sh  test_adversarial_framework.md  test_adversarial_resource_exhaustion.py  test_auth_wildcard.rs  test_backend_only.rs  test_backend_poc.rs  test_config_validator.sh  test_deepseek.sh  (+43 more)
.claude/: settings.local.json.example
.claude/agents/: commit-reviewer.md
.claude/commands/: review-commit.md
.github/: copilot-instructions.md
.github/instructions/: rust.instructions.md
.github/workflows/: actions-security.yml  ci.yml  integration-tests.yml  release-packaging.yml  secret-scan.yml  staging-nightly.yml
config-examples/: helicone-proxy.toml
crates/adversary-detector/: Cargo.toml  README.md
crates/calciforge/: Cargo.toml  Dockerfile  INSTALLER-IMPL-NOTES.md  WHATSAPP-SETUP.md
crates/calciforge-openclaw-channel-plugin/: index.js  package.json  (+1 more)
crates/calciforge/examples/: config.toml
crates/calciforge/src/: agent_kinds.rs  artifacts.rs  auth.rs  choice_state.rs  commands.rs  config.rs  context.rs  doctor.rs  main.rs  messages.rs  model_names.rs  persistent_context.rs  router.rs  sync.rs
crates/calciforge/src/adapters/: TODO-native-channel.md  acp.rs  acpx.rs  artifact_cli.rs  claude_cli.rs  cli.rs  codex_cli.rs  dirac_cli.rs  hermes.rs  ironclaw.rs  kimi_cli.rs  mod.rs  nzc_native.rs  openai_compat.rs  openclaw.rs  openclaw_channel.rs  openclaw_native.rs  zeroclaw_native.rs
crates/calciforge/src/channels/: matrix.rs  mock.rs  mod.rs  signal.rs  sms.rs  telegram.rs  telemetry.rs  whatsapp.rs
crates/calciforge/src/config/: validator.rs
crates/calciforge/src/hooks/: memory.rs  mod.rs
crates/calciforge/src/install/: cli.rs  executor.rs  health.rs  json5.rs  linux_hardening.rs  migration_types.rs  mod.rs  model.rs  ssh.rs  wizard.rs
crates/calciforge/src/local_model/: mod.rs
crates/calciforge/src/providers/: alloy.rs  mod.rs
crates/calciforge/src/proxy/: auth.rs  backend.rs  exec_gateway.rs  gateway.rs  handlers.rs  helicone_router.rs  mod.rs  model_resolver.rs  retry.rs  routing.rs  token_estimator.rs  voice_handlers.rs
crates/calciforge/src/proxy/traceloop/: deepseek.rs  mod.rs
crates/calciforge/src/voice/: mod.rs  tools.rs
crates/calciforge/tests/: loom.rs
crates/calciforge/tests/e2e/: adapter_edge_cases.rs  config_sanity.rs  main.rs  property_tests.rs  secrets_proxy.rs  security_tests.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs  main.rs
crates/onecli-client/: Cargo.toml  Dockerfile  VAULT_SETUP.md
crates/onecli-client/examples/: fnox_library_smoke.rs
crates/onecli-client/src/: client.rs  config.rs  error.rs  fnox_client.rs  fnox_library.rs  lib.rs  main.rs  retry.rs  vault.rs
crates/onecli-client/tests/: vault_fallthrough.rs
crates/paste-server/: Cargo.toml
crates/paste-server/src/: lib.rs  main.rs
crates/secrets-client/: Cargo.toml  Dockerfile
crates/secrets-client/examples/: fnox_library_smoke.rs
crates/secrets-client/src/: config.rs  fnox_client.rs  fnox_library.rs  lib.rs  secret_refs.rs  vault.rs
crates/secrets-client/tests/: vault_fallthrough.rs
crates/security-proxy/: Cargo.toml
crates/security-proxy/src/: agent_config.rs  agent_web.rs  config.rs  credentials.rs  ironclaw.rs  lib.rs  main.rs  mitm.rs  proxy.rs  router.rs  scanner.rs  substitution.rs
crates/security-proxy/tests/: agent_web.rs  destination_allowlist.rs  integration.rs  mitm_https.rs  substitution_body_headers.rs  vault_route.rs
deploy/: nodes.example.json
docs/: CNAME  MANUAL_INSTALL.md  OPS-HARDENING.md  README.md  _config.yml  acpx-claude-setup.md  adversarial-code-review-2026-04-25.md  agent-adapters.md  agent-runtime-contract.md  agents-of-chaos-lessons.md  agents.md  architecture-review-2026-04-25.md  channel-ui.md  clash-integration.md  codex-openclaw-integration.md  helicone-integration-status.md  index.md  installer-open-questions.md  model-gateway.md  opus-review-2.md  opus-review.md  packaging.md  security-audit-cve-2026-33579.md  security-gateway.md  sidecar-comparison.md  staging-test-matrix.md  test-quality-review-2026-04-25.md  typo-handling-design.md  vendor-067-comparison.md  whatsapp-native-research.md
examples/: security-scanner.star
research/: acp-adapter-design.md  acp-adapter-implementation.md  acp-session-handoff.md  approval-relay-design.md  codex-session-worklog.md  fs-transaction-alternatives.md  fs-transaction-proposals.md  fs-transaction-summary.md  jai-analysis.md  jai-integration-levels.md  onecli-architecture.md  openclaw-integration-points.md  openclaw-migration.md  openclaw-schema-versioning.md  vault-groundwork-summary.md  vault-parity.md
scripts/: agent-recipe-smoke.sh  analyze-failures.py  build-dist-archive.sh  calciforge-mock-channel-smoke.sh  check-docs-site.rb  check-packaging.sh  claude-post-commit.sh  cleanup-210-polyclaw.sh  deploy-210.sh  docker-compose.yml  helicone-doctor.sh  install-calciforge.sh  install-git-hooks.sh  install-host-agent.sh  install-security-stack.sh  install-zeroclawed.sh  install.sh  manual-docker-test.sh  matrix-real-e2e.py  mock-llm.py  model-gateway-helicone-smoke.py  model-gateway-synthetic-e2e.py  pre-commit-hook.sh  pre-push.sh  ralph-loop-overnight.sh  ralph-loop.sh  remote-llm-scanner-prompt.txt  remote-llm-scanner.py  render-homebrew-formula.sh  security-proxy-canary-smoke.sh  setup-agents.sh  setup-claude-hooks.sh  targets.txt  test-config.toml  test-host-agent.sh  upstream-sync.sh
test_scenarios/: README.md
(+275 files in other folders)
