[workspace]

members = [
    "crates/calciforge",
    "crates/mcp-server",
    "crates/paste-server",
    "crates/adversary-detector",
    "crates/security-proxy",
    "crates/host-agent",
    "crates/secrets-client",
    "crates/clashd",
    "crates/loom-tests",
]

# loom-tests requires RUSTFLAGS='--cfg loom' — exclude from default cargo test
default-members = [
    "crates/calciforge",
    "crates/mcp-server",
    "crates/paste-server",
    "crates/adversary-detector",
    "crates/security-proxy",
    "crates/host-agent",
    "crates/secrets-client",
    "crates/clashd",
]

resolver = "2"

[workspace.dependencies]
# External agent dependencies
zeroclawlabs = { package = "zeroclawlabs", git = "https://github.com/bglusman/zeroclaw", branch = "calciforge-interactive" }
zeroclaw-api = { git = "https://github.com/bglusman/zeroclaw", branch = "calciforge-interactive" }
zeroclaw-channels = { git = "https://github.com/bglusman/zeroclaw", branch = "calciforge-interactive" }
zeroclaw-config = { git = "https://github.com/bglusman/zeroclaw", branch = "calciforge-interactive" }
clash = "0.6.2"
claw-code = { git = "https://github.com/instructkr/claw-code" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Async traits
async-trait = "0.1"

# Regex
regex = "1"

# IronClaw safety (leak detection, credential injection detection)
ironclaw_safety = { git = "https://github.com/nearai/ironclaw", rev = "1e00b1f" }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Base64
base64 = "0.22"

# UUID
uuid = { version = "1", features = ["v4", "std"] }

# Testing (workspace-wide)
proptest = "1.5"
mockito = "1.5"

# Shared workspace crates
adversary-detector = { path = "crates/adversary-detector" }
security-proxy = { path = "crates/security-proxy" }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-fast]
inherits = "release"
codegen-units = 8

[profile.dist]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[patch.crates-io]
# matrix-sdk = { git = "https://github.com/upstream-fork/matrix-rust-sdk" } # temporarily disabled for local builds
