[package]
name = "security-proxy"
version = "0.1.0"
edition = "2021"
description = "Calciforge — Mandatory security proxy for agent traffic"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["tokio", "http1", "http2"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
hudsucker = { version = "0.24.0", features = ["http2"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
adversary-detector = { path = "../adversary-detector" }
# Shared secret-resolver library (env → fnox → vaultwarden). The secrets
# binary itself is slated for removal in the #28 consolidation, but the
# library stays (likely to be renamed to secret-proxy-client).
secrets-client = { path = "../secrets-client" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rcgen = { version = "0.13", features = ["pem"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
bytes = "1"
http = "1"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
regex = "1"
once_cell = "1"

[[bin]]
name = "security-proxy"
path = "src/main.rs"

[dev-dependencies]
hyper-rustls = "0.27"
rustls-pemfile = "2"
wiremock = "0.6"
tempfile = "3"
